3 files modified, 1 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -12,8 +12,14 @@
     Description: {{ product.description }}
   </p>
 
+  
   <button (click)="share()">
-    Share
-  </button>
+  Share
+</button>
+
+<app-product-alerts
+  [product]="product"  (notify)="onNotify()"
+  >
+</app-product-alerts>
 
 </div>
